2021-05-07  Karl Berry  <karl@freefriends.org>

	* tex.ch (sup_save_size): increase to 30000000
	(could be max_halfword). Found by Christian Schenk,
	tex-live 18 Mar 2021 18:39:04.

2021-05-07  Karl Berry  <karl@freefriends.org>

	* doc/web2c.texi,
	* doc/ref.txi: typos.

2021-04-13  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: CWEB release 4.3.

2021-03-24  Andreas Scherer  <https://ascherer.github.io>

	* help.h: New options for CTANGLE, CWEAVE and CTWILL.

2021-03-23  Karl Berry  <karl@tug.org>

	* TL'21.

2021-03-08  Karl Berry  <karl@tug.org>

	* doc/glue.web,
	* doc/webman.tex: add these Knuth files here, since nowhere
	else seems better. PDF output for them is in the knuth-pdf package.

2021-03-06  Andreas Scherer  <https://ascherer.github.io>

	* Makefile.in,
	* am/cweb.am: Patch refsort and twinx with changefiles.

2021-02-25  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: CWEB release 4.2.

2021-02-24  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Code review.

2021-02-22  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Code review.

2021-02-20  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: CWEB release 4.1.

2021-02-19  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* cwebboot.cin: Replace 'boolean' values upstream.

2021-02-18  Karl Berry  <karl@freefriends.org>

	* doc/web2c.texi (Common options): mention -cnf-line.
	Also, use https instead of http for most urls,
	update for 2021, etc.

2021-02-18  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin: Reshuffle a few variables (upstream).

2021-02-16  Andreas Scherer  <https://ascherer.github.io>

	* Makefile.in,
	* am/bootstrap.am: Main CWEB modules depend on COMMON interface.

2021-02-17  Karl Berry  <karl@tug.org>

	* NEWS,
	* doc/web2c.texi: 2021 release.
